WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284043
getUserMedia for video only should not trigger exposure of microphone (and vice versa)
https://bugs.webkit.org/show_bug.cgi?id=284043
Summary
getUserMedia for video only should not trigger exposure of microphone (and vi...
youenn fablet
Reported
2024-12-04 08:24:23 PST
getUserMedia for video only should not trigger exposure of microphone (and vice versa)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-04 08:24:39 PST
<
rdar://problem/140917408
>
EWS
Comment 2
2024-12-10 13:24:42 PST
Committed
287629@main
(07f45d308dc3): <
https://commits.webkit.org/287629@main
> Reviewed commits have been landed. Closing PR #37435 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug